--- a/game.css
+++ b/game.css
@@ -1,19 +1,26 @@
 #background {
 	margin: 0;
-	min-height: 100vh;
+	height: 100vh;
 	background: radial-gradient(green, black 200%);
 }
 
-table {
+#menu {
 	background-color: white;
 	border-radius: 20px;
 	box-shadow: 0px 0px 20px 5px black;
+	margin: auto;
+	padding: 20px;
+	transform: translateY(40vh);
 }
 
-#menu {
-	margin-top: 0%;
+#menu table {
+	width: 100%;
 }
 
 td {
-	border: 0px;
+	text-align: center;
+}
+
+#listplayers {
+	border: 1px solid black;
 }
