--- a/game.css
+++ b/game.css
@@ -24,3 +24,49 @@ td {
 #listplayers {
 	border: 1px solid black;
 }
+
+/*******************************/
+/* style utilisé par tapis.php */
+/*******************************/
+
+.pioche{
+	width:5%;
+}
+
+.terrain {
+	display: grid;
+	grid-auto-columns: 20%;
+	grid-auto-rows: 20%;
+}
+
+.main{
+	background:rgba(144, 238, 144, 0.25);
+	display: grid;
+	grid-auto-columns: 20%;
+	grid-auto-rows: 100%;
+}
+
+#J{
+	grid-row: 5/5;
+	grid-column: 2/5 ;
+}
+
+#Ad1{
+	grid-row: 2/5 ;
+	grid-column: 1/1;
+}
+
+#Ad2{
+	grid-row: 1/1 ;
+	grid-column: 2/5;
+}
+
+#Ad3{
+	grid-row: 2/5;
+	grid-column: 5/5 ;
+}
+
+#zone-jeu{
+	grid-row: 3;
+	grid-column: 3;
+}
