creation du fichier rules.json - modification de la structure de partie.json
- creation de refresh.php
- mise en place du rafraichissement auto de la page

--- a/game.css
+++ b/game.css
@@ -29,6 +29,11 @@ td {
 /* style utilisé par tapis.php */
 /*******************************/
 
+img{
+	object-fit:scale-down;
+
+}
+
 .pioche{
 	width:5%;
 }
