--- a/game.css
+++ b/game.css
@@ -51,9 +51,13 @@ img{
 	grid-auto-rows: 100%;
 }
 
+
 #J{
 	grid-row: 5/5;
-	grid-column: 2/5 ;
+	grid-column: 2/5;
+
+	display: grid;
+	gap: 10px;
 }
 
 #Ad1{
@@ -72,8 +76,8 @@ img{
 }
 
 #zone-jeu{
-	grid-row: 3;
-	grid-column: 3;
+	grid-row: 2/5;
+	grid-column: 2/5;
 }
 
 #pioche{
