Add card animation (need refresh fixe)

--- a/game.css
+++ b/game.css
@@ -55,8 +55,7 @@ img{
 #J{
 	grid-row: 5/5;
 	grid-column: 2/5;
-
-	display: grid;
+	display: flex;
 	gap: 10px;
 }
 
@@ -87,4 +86,16 @@ img{
 
 .carte{
 	max-height: 20vh;
+	max-width: 10vw;
+  	position: relative;
+}
+
+#J .carte:not(:first-child){
+	margin-left: -5vw;
+}
+
+#J .carte:hover {
+	transform: translateY(0vh);
+	margin-right: 4vw;
+	transition: 0.4s ease-in-out;
 }
