--- a/game.css
+++ b/game.css
@@ -38,10 +38,11 @@ img{
 }
 
 .terrain {
-	min-height: 100%;
+	min-height: 100vh;
 	display: grid;
-	grid-auto-columns: 20%;
-	grid-auto-rows: 20%;
+	grid-auto-columns: 20vw;
+	grid-auto-rows: 20vh;
+	
 }
 
 .main{
@@ -52,8 +53,7 @@ img{
 }
 
 .carte{
-	max-height: 20vh;
-	max-width: 10vw;
+	max-height: 100%;
   	position: relative;
 }
 
@@ -64,8 +64,8 @@ img{
 #J{
 	grid-row: 5/5;
 	grid-column: 2/5;
-	display: inline;
-	gap: 10px;
+	display: flex;
+	overflow-x: scroll;
 }
 
 #J .carte:not(:first-child){
@@ -130,13 +130,13 @@ img{
 #tchat{
 	grid-row: 5/5;
 	grid-column: 1/1;
-	display: inline;
 }
 
 #tchat_content{
 	height: 90%;
 	width: 100%;
 	background-color: white;
+	overflow: auto;
 }
 
 #tchat_input{
