--- a/game.css
+++ b/game.css
@@ -42,7 +42,7 @@ img{
 	display: grid;
 	grid-auto-columns: 20vw;
 	grid-auto-rows: 20vh;
-	
+
 }
 
 .main{
@@ -53,7 +53,7 @@ img{
 }
 
 .carte{
-	max-height: 100%;
+	max-height: 20vh;
   	position: relative;
 }
 
